llvm/src/snapshots/transmute_llvm__tests__ne_number_number.snap
---
source: llvm/src/lib.rs
expression: res
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

define i1 @f(i64 %"l#sym19#", i64 %"r#sym20#") {
entry:
  %"ne#" = icmp ne i64 %"l#sym19#", %"r#sym20#"
  ret i1 %"ne#"
}
