llvm/src/snapshots/transmute_llvm__tests__ne_number_number_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define i1 @_TM0_1f2nn(i64 %"l#param#sym18#", i64 %"r#param#sym19#") gc "shadow-stack" {
entry:
  %"ne#" = icmp ne i64 %"l#param#sym18#", %"r#param#sym19#"
  ret i1 %"ne#"
}

attributes #0 = { nounwind }
