llvm/src/snapshots/transmute_llvm__tests__nested_function_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @_TM0_5print1Pn(i64)

declare void @_TM0_5print1Pb(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f0P() gc "shadow-stack" {
entry:
  %"g#res#" = call i64 @_TM0_1g0P()
  ret i64 %"g#res#"
}

define i64 @_TM0_1g0P() gc "shadow-stack" {
entry:
  ret i64 1
}

attributes #0 = { nounwind }
