llvm/src/snapshots/transmute_llvm__tests__nested_struct_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define void @_TM0_1f1n(i64 %"n#param#sym20#") gc "shadow-stack" {
entry:
  ret void
}

define void @_TM0_N1f1n1g1sN1f1n8MyStruct(ptr %"p#param#sym22#") gc "shadow-stack" {
entry:
  ret void
}

attributes #0 = { nounwind }
