llvm/src/snapshots/transmute_llvm__tests__print_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

declare void @print(i64)

declare ptr @malloc(i64)

define void @a(i64 %"n#param#sym19#") {
entry:
  call void @print(i64 %"n#param#sym19#")
  ret void
}
